--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header{
 header #header_center{
     background-color: #6d7680;
     display: flex;
-    width: 50%;
+    width: 80%;
     flex-direction: row;
     gap: 100px;
     justify-content: center;
@@ -55,11 +55,13 @@ header #header_center{
     box-shadow: 1px 1px 5px #000000;
     text-shadow: 1px 1px 2px #000000;
     transition: 0.8s;
+    border: solid 2px var(--cor-principal);
 }
 
 .dark-mode #header_center{
     box-shadow: 0px 0px 10px #ffffff;
     text-shadow: 0px 0px 10px #ffffff;
+    border: solid 2px white;
 }
 
 header button {
@@ -68,6 +70,7 @@ header button {
     border: none;
     font-weight: 900;
     background-color: #343A40;
+    border-radius: 5px;
     color: #F8F9FA;
     box-shadow: 1px 1px 5px #343A40;
     transition: 0.8s;
@@ -90,7 +93,7 @@ main{
     display: flex;
     flex-direction: row;
     margin: auto;
-    width: 50%;
+    width: 80%;
     justify-content: space-around;
 }
 
@@ -139,6 +142,11 @@ main{
     
 }
 
+.dark-mode #imc button:hover{
+    background-color: var(--cor-destaque);
+    
+}
+
 /* Tabla dentro del IMC */
 
 table{
@@ -172,6 +180,10 @@ td:hover{
     color: #F8F9FA;
 }
 
+.dark-mode #sueldo button:hover{
+    background-color: var(--cor-destaque);
+    
+}
 
 
 
